== 1.5.2-stable1 ==

 * Build system: Removed absolute file paths
 * Database: Assure write permissions
 * Engine: fixed switching between pulse and alsa
 * Engine: fixed adding/removing pitch issues
 * Languages: fixed some capital letter issues at word beginning
 * Library: fixed album rating regression
 * Notifications: Override notifications if the appear to often
 * Playlist: Handling of large filesets in the background, no
   blocking user interface anymore
 * Playlist: fixed finding of tracks in library
 * Remote control: created new protocol
 * Soma.fm: high resolution images available
 * Speed/Pitch: dynamically adding/removing to/from pipelines fixed
 * System Tray icon: Style update
 * Tagging: fixed empty selection issue when applying tags from path
 * User interface: Time string updates
 * User interface: Consistent time labels
 * User interface: Blurry icons fix in searchbar

== 1.5.1-stable5 ==

 * Stream recorder: fixed segfault when recording is started
 * Stream recorder: fixed naming of playlist
 * SomaFM: fixed naming of playlist items
 * User interface: fixed focus issue in playlist
 * User interface: fixed background in rating labels

== 1.5.1-stable4 ==

 * Covers: fixed thread deletion bug 
 * Library: fixed segfault when clicking on reload library
 * Spectrum/Level: fixed missing values
 * Streams: fixed translation of search button
 * Style: fixed runtime style changes
 * Language: translations updated
 * Soundcloud: Database fixes
 * DBus: Avoid too many cover requests

== 1.5.1-stable3 ==

 * Library: Integer overflow fix in Info dialog
 * Static linkage of libraries

== 1.5.1-stable2 ==

 * Taglib include and link path changes

== 1.5.1-stable1 ==
 
  * Database: Removed vacuum action
  * User Interface: Language updates and little fixes
  * User Interface: High resolution fixes
  * User Interface: fixed filetype button overlapping
  * Playback: fixed double click start playing bug

== 1.5.0-stable1 ==
