@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>249</width>
-    <height>104</height>
+    <height>136</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,6 +24,19 @@
      </attribute>
     </widget>
    </item>
+   <item row="2" column="0">
+    <widget class="QRadioButton" name="rb_alsa">
+     <property name="text">
+      <string notr="true">Alsa</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QComboBox" name="combo_alsa_devices"/>
+   </item>
    <item row="1" column="0">
     <widget class="QRadioButton" name="rb_pulse">
      <property name="text">
@@ -34,15 +47,18 @@
      </attribute>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QRadioButton" name="rb_alsa">
-     <property name="text">
-      <string notr="true">Alsa</string>
+   <item row="4" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-     <attribute name="buttonGroup">
-      <string notr="true">buttonGroup</string>
-     </attribute>
-    </widget>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
