@@ -2,6 +2,7 @@
 
  * Build system: Removed absolute file paths
  * Database: Assure write permissions
+ * Directory view: fixed delete issues
  * Engine: fixed switching between pulse and alsa
  * Engine: fixed adding/removing pitch issues
  * Languages: fixed some capital letter issues at word beginning
